# datafusion-orc

./: .gitignore  Cargo.toml
src/: arrow_reader.rs  async_arrow_reader.rs
src/array_decoder/: mod.rs  union.rs
src/datafusion/: file_format.rs  mod.rs  physical_exec.rs
